@@ -10,7 +10,7 @@ plugins {
     id("org.asciidoctor.jvm.convert") version "3.3.2"
 
     // Apply the Kotlin JVM plugin to add support for Kotlin.
-    id("org.jetbrains.kotlin.jvm") version "1.4.32"
+    id("org.jetbrains.kotlin.jvm") version "1.5.0"
 
     // Apply the application plugin to add support for building a CLI application.
     application
@@ -47,7 +47,10 @@ application {
     // Default JVM settings
 
 	// G1GC (default), Java 11
-    applicationDefaultJvmArgs = listOf("-server", "-Xmx4096m", "-XX:+ParallelRefProcEnabled")
+    applicationDefaultJvmArgs = listOf("-server", "-Xms4096m", "-Xmx4096m", "-XX:+UseG1GC", "-XX:+ParallelRefProcEnabled")
+
+    // applicationDefaultJvmArgs = listOf("-server", "-Xms4096m", "-Xmx4096m", "-XX:+UseZGC")
+    // applicationDefaultJvmArgs = listOf("-server", "-Xmx4096m", "-Xmx4096m", "-XX:+UseShenandoahGC")
 	
 	// Java 8
 	//, "-XX:+UseParallelGC")
